[tool.poetry]
name = "cluesolver"
version = "0.1.0"
description = "A sovling aid for the game of Clue"
authors = ["David Breese <dabreese00@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
PyEventEmitter = "^1.0.5"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.1.2"
pylint = "^2.13.7"
mypy = "^0.950"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
